--- a/templates/login.html
+++ b/templates/login.html
@@ -13,5 +13,7 @@
         {% endif %}
         <input class="button" type="submit" value="Войти">
             <li><a href="/">Home</a></li>
+            <li><a href="/register/">Регистрация</a></li>
+            <li><a href="/eregister/">Email Регистрация</a></li>
     </form>
 {% endblock %}
