--- a/templates/home.html
+++ b/templates/home.html
@@ -1,24 +1,28 @@
-
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
 <body>
     <h3>home.html</h3>
     {% if user.username %}
         <h1>ID: {{ user.id }}</h1>
         <h1>username: {{ user.username}}</h1>
-        <li><a href="/logout/">Выйти</a></li>
+            <li><a href="/changeSet/">Изменить данные</a></li>
+            <li><a href="/changePass/">Сменить пароль</a></li>
+            <li><a href="/logout/">Выйти</a></li>
     {% else %}
         <h1>Никого нет дома</h1>
 
-
-        {% block login %}
-            <li><a href="/login/">Войти</a></li>
-        {% endblock %}
+    {% block login %}
+       <li><a href="/login/">Войти</a></li>
+       <li><a href="/register/">Регистрация</a></li>
+       <li><a href="/eregister/">Email Регистрация</a></li>
+    {% endblock %}
 
     {% endif %}
 
